# PRefToMotion

./: CMakeLists_LINUX.txt  CMakeLists_MAC.txt  CMakeLists_WIN.txt  LICENSE  README.md  building_step_by_step_LINUX.txt  building_step_by_step_MAC.txt  building_step_by_step_WIN.txt
LINUX/: readme.md
MAC/Nuke15.0v8/: PRefToMotion.dylib
MAC/Nuke15.1v10/: PRefToMotion.dylib
MAC/Nuke15.2v6/: PRefToMotion.dylib
MAC/Nuke16.0v6/: PRefToMotion.dylib
MAC/Nuke16.1v1/: PRefToMotion.dylib
MAC/Nuke17.0v1/: PRefToMotion.dylib
Nuke 15.1v3_MAC/: CMakeLists.txt  building_step_by_step.txt
Nuke 15.1v3_MAC/Compiled/: PRefToMotion.dylib
Nuke 15.1v3_MAC/headers/: compatibility.h
Nuke 15.1v3_MAC/src/: PRefToMotion.cpp
WIN_BUILD_PRefToMotion_17.0v1/: CMakeLists.txt  building_step_by_step.txt
WIN_BUILD_PRefToMotion_17.0v1/src/: CMakeLists.txt  PRefToMotion.cpp
compiled/mac/arm64/: CMakeLists.txt
compiled/mac/arm64/Nuke15.0v5/: PRefToMotion.dylib
compiled/mac/arm64/Nuke15.2v1-Beta.3/: PRefToMotion.dylib
compiled/mac/arm64/Nuke16.0v1/: PRefToMotion.dylib
compiled/mac/arm64/Nuke16.0v1-Beta.3/: PRefToMotion.dylib
compiled/mac/arm64/Nuke16.0v1-Beta.4/: PRefToMotion.dylib
compiled/mac/x86_64/: CMakeLists.txt
compiled/mac/x86_64/Nuke14.0v8/: PRefToMotion.dylib
compiled/mac/x86_64/Nuke14.1v5/: PRefToMotion.dylib
src/: PRefToMotion.cpp
